--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "babel-plugin-module-resolver": "^5.0.0",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-asset": "^2.1.1",
     "react-native-gesture-handler": "^2.10.1",
     "react-native-reanimated": "^2.2.4",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "^3.15.0",
-    "react-native-svg": "^13.4.0"
+    "react-native-svg": "^13.4.0",
+    "react-native-webview": "^12.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
