--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "^3.15.0",
     "react-native-svg": "^13.4.0",
+    "react-native-video": "^5.2.1",
     "react-native-webview": "^12.1.0"
   },
   "devDependencies": {
