--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.18.1",
+    "@react-native-community/geolocation": "^3.0.6",
     "@react-navigation/bottom-tabs": "^5.x",
     "@react-navigation/native": "^5.x",
     "@react-navigation/stack": "^5.x",
@@ -19,6 +20,7 @@
     "react-native": "0.71.8",
     "react-native-asset": "^2.1.1",
     "react-native-gesture-handler": "^2.10.1",
+    "react-native-image-picker": "^5.4.0",
     "react-native-reanimated": "^2.2.4",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "^3.15.0",
