--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.18.1",
+    "@react-native-camera-roll/camera-roll": "^5.5.0",
     "@react-native-community/geolocation": "^3.0.6",
     "@react-navigation/bottom-tabs": "^5.x",
     "@react-navigation/native": "^5.x",
@@ -26,7 +27,8 @@
     "react-native-screens": "^3.15.0",
     "react-native-svg": "^13.4.0",
     "react-native-video": "^5.2.1",
-    "react-native-webview": "^12.1.0"
+    "react-native-webview": "^12.1.0",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
