--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,6 +7,10 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <!-- 图片访问 -->
+
+    <!-- <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" /> -->
+    <!-- 相机 -->
     <application
       android:requestLegacyExternalStorage="true"
       android:name=".MainApplication"
@@ -42,5 +46,8 @@
        </intent-filter>
        <!-- DeepLinking -->
       </activity>
+        <activity android:name=".wxapi.WXEntryActivity" android:label="@string/app_name" android:exported="true" />
+        <activity android:name=".wxapi.WXPayEntryActivity" android:label="@string/app_name" android:exported="true" />
+        <!-- 微信 -->
     </application>
 </manifest>
