--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,12 +3,12 @@
 buildscript {
     ext {
         buildToolsVersion = "33.0.0"
+        kotlinVersion = '1.7.0'
         minSdkVersion = 21
         compileSdkVersion = 33
         targetSdkVersion = 33
-
         // We use NDK 23 which has both M1 support and is the side-by-side NDK version from AGP.
-        ndkVersion = "23.1.7779620"
+        ndkVersion = '21.4.7075529'
     }
     repositories {
         google()
