--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-svg": "^13.4.0",
     "react-native-video": "^5.2.1",
     "react-native-webview": "^12.1.0",
+    "react-native-wechat-lib": "^1.1.26",
     "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
