--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.awesometsproject">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -45,8 +45,13 @@
        </intent-filter>
        <!-- DeepLinking -->
       </activity>
-        <activity android:name=".wxapi.WXEntryActivity" android:label="@string/app_name" android:exported="true" />
-        <activity android:name=".wxapi.WXPayEntryActivity" android:label="@string/app_name" android:exported="true" />
+        <activity android:name=".wxapi.WXEntryActivity" 
+        android:label="@string/app_name" 
+        android:exported="true" 
+        />
+        <activity android:name=".wxapi.WXPayEntryActivity" 
+        android:label="@string/app_name" 
+        android:exported="true" />
         <!-- 微信 -->
     </application>
 </manifest>
