--- a/package.json
+++ b/package.json
@@ -41,8 +41,12 @@
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "@typescript-eslint/parser": "^5.59.8",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^29.2.1",
+    "eslint": "^8.41.0",
+    "eslint-plugin-react": "^7.32.2",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.9",
     "prettier": "^2.4.1",
